k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
    - host: fibonacci.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fib-api
                port:
                  number: 8000
